# IEEE-EPIC-project

./: AGENTS.md  AGENTS_UPDATE_SUMMARY.md  CLEANUP_SUMMARY.md  DEEPGRAM_MIGRATION_SUMMARY.md  GEMINI_MIGRATION.md  HANDSHAKE_SETUP.md  MIGRATION_SUMMARY.md  PROJECT_PROPOSAL.md  QUICK_START.md  README.md  README_DEEPGRAM.md  README_GEMINI.md  README_ONLINE_STT.md  README_RPi.md  README_TK_UI.md  README_UI.md  SARAS_IDENTITY_SUMMARY.md  VOICE_RECOGNITION.md  WAKE_WORD_SETUP.md  advanced_wake_word.py  audio_system_fixer.py  config.example.json  context7_enhanced_ai.py  debug_gemini.py  demo_online_stt.py  dual_activation_ai.py  enhanced_voice_recognition.py  enhanced_wake_word_ai.py  epic_tk_ui.py  epic_ui.py  fixed_dual_activation_ai.py  fixed_enhanced_wake_word_ai.py  fixed_wake_word_detector.py  handshake_voice_ai.py  main.py  proximity.py  pyproject.toml  python_response.py  quick_api_fix.py  quick_mic_test.py  (+21 more)
data/: offline_responses.json
src/ieee_epic/: __init__.py  main.py
src/ieee_epic/cli/: __init__.py
src/ieee_epic/core/: __init__.py  ai_response.py  config.py  simple_stt.py  simple_tts.py  stt.py  tts.py
src/ieee_epic/utils/: __init__.py  audio.py  setup.py
tests/: __init__.py  test_config.py
